--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#8bc34a</color>
     <color name="colorPrimaryDark">#689F38</color>
     <color name="colorAccent">#7c4dff</color>
+    <color name="colorError">#B00020</color>
 </resources>
