--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,8 +25,7 @@
     <LinearLayout
         android:id="@+id/formContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="@dimen/view_space">
 
@@ -55,7 +54,11 @@
             android:layout_marginTop="@dimen/view_space"
             app:errorEnabled="true"
             app:errorTextAppearance="@style/ErrorTextAppearance"
-            app:hintTextAppearance="@style/HintTextAppearance">
+            app:hintTextAppearance="@style/HintTextAppearance"
+            app:passwordToggleContentDescription="@null"
+            app:passwordToggleDrawable="@drawable/ic_visibility_black_24dp"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/colorAccent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/passwordField"
@@ -63,9 +66,29 @@
                 android:layout_height="wrap_content"
                 android:autofillHints="@null"
                 android:hint="@string/customerPassword"
-                android:inputType="textPassword|textNoSuggestions" />
+                android:inputType="textPassword|textNoSuggestions"/>
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/view_space"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/saveCredentials"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/save_credentials"/>
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/loginButton"
@@ -75,6 +98,12 @@
             android:onClick="doLoginWithCredentials"
             android:text="@string/login"
             style="@style/Widget.AppCompat.Button.Colored"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_marginTop="@dimen/view_space"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 
