--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#689F38</color>
     <color name="colorAccent">#7c4dff</color>
     <color name="colorError">#B00020</color>
+    <color name="colorErrorLight">#FFE0B2</color>
+    <color name="textColorPrimary">#DE000000</color>
+    <color name="textSecondary">#99000000</color>
+    <color name="textDisabled">#60000000</color>
 </resources>
