--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="view_space">16dp</dimen>
-    <dimen name="section_height">32dp</dimen>
+    <dimen name="section_height">48dp</dimen>
+    <dimen name="line_height">24dp</dimen>
 </resources>
