--- a/app/src/main/res/layout/item_menu_lunch.xml
+++ b/app/src/main/res/layout/item_menu_lunch.xml
@@ -17,36 +17,48 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp">
+        android:layout_height="88dp"
+        android:paddingTop="16dp">
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_gravity="start|center_vertical"
+            android:layout_gravity="start|top"
             android:src="@drawable/ic_shopping_cart_black_24dp"
             android:tint="@color/colorAccent"
             android:contentDescription="@null"
             android:visibility="@{obj.editable ? View.GONE : View.VISIBLE}"/>
 
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginStart="72dp"
+            android:layout_marginEnd="56dp"
+            android:text="@string/lunch"
+            style="@style/ListItemTitle"/>
+
+        <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="top"
             android:layout_marginStart="72dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="56dp"
+            android:lineSpacingMultiplier="1.2"
             android:text="@{obj.menuName}"
-            tools:text="Frühstück"
-            style="@style/ListItemTitle"/>
+            tools:text="Hartweizen Nudeln mit Tomatenpesto auf Hackfleisch"
+            style="@style/ListItemSecondary"/>
 
         <CheckBox
             android:id="@+id/checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:layout_gravity="end|center_vertical"
+            android:layout_gravity="end|top"
             android:visibility="@{obj.editable ? View.VISIBLE : View.GONE}"
             android:checked="@{adapter.isMenuChecked( obj.id )}"
             android:onCheckedChanged="@{holder::onCheckedChanged}"
