--- a/app/src/main/res/layout/item_section.xml
+++ b/app/src/main/res/layout/item_section.xml
@@ -7,6 +7,5 @@
     android:gravity="center_vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:textSize="14sp"
-    android:textColor="@color/textColorPrimary"
-    tools:text="5 Items"/>
+    tools:text="5 Items"
+    style="@style/ListItemSection"/>
