--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -28,7 +28,7 @@
             android:src="@drawable/ic_shopping_cart_black_24dp"
             android:tint="@color/colorAccent"
             android:contentDescription="@null"
-            android:visibility="@{obj.editable ? View.GONE : View.VISIBLE}"/>
+            android:visibility="@{obj.ordered ? View.VISIBLE : View.GONE}"/>
 
         <TextView
             android:id="@+id/textView"
