--- a/app/src/main/res/layout/item_menu_lunch.xml
+++ b/app/src/main/res/layout/item_menu_lunch.xml
@@ -29,7 +29,7 @@
             android:src="@drawable/ic_shopping_cart_black_24dp"
             android:tint="@color/colorAccent"
             android:contentDescription="@null"
-            android:visibility="@{obj.editable ? View.GONE : View.VISIBLE}"/>
+            android:visibility="@{obj.ordered ? View.VISIBLE : View.GONE}"/>
 
         <TextView
             android:layout_width="match_parent"
