--- a/app/src/main/res/layout/item_menu_lunch.xml
+++ b/app/src/main/res/layout/item_menu_lunch.xml
@@ -20,22 +20,11 @@
         android:layout_height="88dp"
         android:paddingTop="16dp">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_gravity="start|top"
-            android:src="@drawable/ic_shopping_cart_black_24dp"
-            android:tint="@color/colorAccent"
-            android:contentDescription="@null"
-            android:visibility="@{obj.ordered ? View.VISIBLE : View.GONE}"/>
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:layout_marginStart="72dp"
+            android:layout_marginStart="16dp"
             android:layout_marginEnd="56dp"
             android:text="@string/lunch"
             style="@style/ListItemTitle"/>
@@ -45,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:layout_marginStart="72dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="56dp"
             android:lineSpacingMultiplier="1.2"
@@ -63,6 +52,18 @@
             android:checked="@{adapter.isMenuChecked( obj.id )}"
             android:onCheckedChanged="@{holder::onCheckedChanged}"
             tools:checked="true" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_gravity="end|top"
+            android:src="@drawable/ic_shopping_cart_black_24dp"
+            android:tint="@color/colorAccent"
+            android:contentDescription="@null"
+            android:visibility="@{!obj.editable &amp;&amp; obj.ordered ? View.VISIBLE : View.GONE}"
+            tools:visibility="gone"/>
 
     </FrameLayout>
 </layout>
