--- a/app/src/main/res/layout/toolbar_spinner_item_dropdown.xml
+++ b/app/src/main/res/layout/toolbar_spinner_item_dropdown.xml
@@ -1,13 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@android:id/text1"
-    style="?android:attr/spinnerDropDownItemStyle"
-    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-    android:textColor="@color/textColorPrimary"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp"
-    android:gravity="center_vertical|start"
-    tools:text="Spinner Item Dropdown"/>
+    android:layout_height="48dp">
+
+    <ImageView
+        android:id="@android:id/icon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="16dp"
+        android:contentDescription="@null"
+        android:src="@drawable/ic_check_black_24dp"
+        android:tint="@color/icon"/>
+
+    <TextView
+        android:id="@android:id/text1"
+        style="?android:attr/spinnerDropDownItemStyle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical|start"
+        android:paddingStart="56dp"
+        android:paddingEnd="16dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+        android:textColor="@color/textColorPrimary"
+        tools:text="Spinner Item Dropdown" />
+
+</FrameLayout>
