--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="textColorPrimary">#DE000000</color>
     <color name="textSecondary">#99000000</color>
     <color name="textDisabled">#60000000</color>
+    <color name="textOnPrimary">#DE000000</color>
+    <color name="textOnAccent">#DEFFFFFF</color>
+    <color name="icon">#6E6E6E</color>
 </resources>
