--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -26,7 +26,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="56dp"
-            android:text="@{obj.menuName}"
+            android:text="@{@string/menu_name_and_price(obj.menuName, obj.price)}"
             tools:text="Frühstück"
             style="@style/ListItemTitle"/>
 
