--- a/app/src/main/res/menu/menu_list_cab_menu.xml
+++ b/app/src/main/res/menu/menu_list_cab_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_change"
+        android:id="@+id/action_change_menus_order_status"
         android:title="@string/action_menu_change"
         app:showAsAction="ifRoom" />
 </menu>
