--- a/app/src/main/res/layout/toolbar_spinner_item.xml
+++ b/app/src/main/res/layout/toolbar_spinner_item.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    style="?android:attr/spinnerDropDownItemStyle"
+    style="?android:attr/spinnerItemStyle"
     android:id="@android:id/text1"
     android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="match_parent"
     android:gravity="center_vertical"
-    android:paddingStart="0dp"
-    android:paddingEnd="8dp"
-    android:singleLine="true"
-    android:maxLines="1"
+    android:singleLine="false"
+    android:maxLines="2"
     tools:text="Spinner Item"/>
