style order confirmation dialog, more databinding tricks, hide price until better design

--- a/app/src/main/res/layout/fragment_menu_confirmation.xml
+++ b/app/src/main/res/layout/fragment_menu_confirmation.xml
@@ -19,24 +19,13 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.core.widget.NestedScrollView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="16dp">
-
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </FrameLayout>
-
-        </androidx.core.widget.NestedScrollView>
+            android:clipToPadding="false"
+            android:paddingBottom="@dimen/view_space"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
