--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="android.view.View"/>
         <variable
             name="obj"
             type="de.wackernagel.essbar.ui.Menu"/>
@@ -36,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_gravity="end|center_vertical"
-            android:visibility="@{obj.editable ? View.VISIBLE : View.GONE}"
+            android:visibility="@{obj.editable}"
             android:checked="@{adapter.isMenuChecked( obj.id )}"
             android:onCheckedChanged="@{holder::onCheckedChanged}"
             tools:checked="true" />
@@ -50,7 +49,7 @@
             android:src="@drawable/ic_shopping_cart_black_24dp"
             android:tint="@color/colorAccent"
             android:contentDescription="@null"
-            android:visibility="@{!obj.editable &amp;&amp; obj.ordered ? View.VISIBLE : View.GONE}"
+            android:visibility="@{!obj.editable &amp;&amp; obj.ordered}"
             tools:visibility="gone"/>
 
     </FrameLayout>
