--- a/app/src/main/res/layout/toolbar_spinner_item.xml
+++ b/app/src/main/res/layout/toolbar_spinner_item.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
+    android:paddingStart="0dp"
     android:singleLine="false"
     android:maxLines="2"
     tools:text="Spinner Item"/>
