--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="textOnAccent">#DEFFFFFF</color>
     <color name="icon">#6E6E6E</color>
     <color name="spinnerSelected">#14000000</color>
+    <color name="actionModeStatusBar">#689F38</color>
 </resources>
