--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="view_space">16dp</dimen>
     <dimen name="section_height">48dp</dimen>
     <dimen name="line_height">24dp</dimen>
+
+    <dimen name="toolbar_statusbar_height">80dp</dimen>
 </resources>
