--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,112 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.LoginActivity"
+    tools:ignore="UnusedAttribute">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:descendantFocusability="beforeDescendants"
-        android:focusableInTouchMode="true"
-        tools:context=".ui.LoginActivity"
-        tools:ignore="UnusedAttribute">
+        android:focusableInTouchMode="true">
+
+        <LinearLayout
+            android:id="@+id/onlineContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="3">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableTop="@mipmap/ic_launcher_cow_round"
+                    android:drawablePadding="16dp"
+                    android:layout_gravity="center"
+                    android:text="@string/app_name"
+                    android:textSize="28sp"
+                    android:fontFamily="@string/roboto_medium"/>
+
+            </FrameLayout>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                app:cardCornerRadius="0dp">
+
+                <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/viewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="44dp"/>
+
+                <com.rd.PageIndicatorView
+                    android:id="@+id/pageIndicatorView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:layout_gravity="bottom|center_horizontal"
+                    app:piv_animationType="swap"
+                    app:piv_dynamicCount="true"
+                    app:piv_interactiveAnimation="true"
+                    app:piv_selectedColor="#673ab7"
+                    app:piv_unselectedColor="#b388ff"
+                    app:piv_viewPager="@id/viewPager"
+                    app:piv_padding="12dp"
+                    app:piv_radius="6dp"/>
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/offlineContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:drawablePadding="16dp"
             android:drawableTop="@drawable/ic_cloud_off_black_96dp"
-            android:text="@string/no_network_connection_error"
+            android:drawablePadding="16dp"
             android:drawableTint="@color/colorAccent"
-            android:textSize="18sp"
-            android:visibility="gone" />
-
-        <LinearLayout
-            android:id="@+id/formContainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="@dimen/view_space">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/usernameContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:errorEnabled="true"
-                app:errorTextAppearance="@style/ErrorTextAppearance"
-                app:hintTextAppearance="@style/HintTextAppearance">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/usernameField"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:autofillHints="@null"
-                    android:hint="@string/customerNumber"
-                    android:inputType="number" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/passwordContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/view_space"
-                app:errorEnabled="true"
-                app:errorTextAppearance="@style/ErrorTextAppearance"
-                app:hintTextAppearance="@style/HintTextAppearance"
-                app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@color/colorAccent">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/passwordField"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:autofillHints="@null"
-                    android:hint="@string/customerPassword"
-                    android:inputType="textPassword|textNoSuggestions" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/view_space"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/saveCredentials"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/save_credentials"
-                    android:lineSpacingMultiplier="1.2"/>
-
-            </LinearLayout>
-
-            <Button
-                android:id="@+id/loginButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/view_space"
-                android:onClick="doLoginWithCredentials"
-                android:text="@string/login"
-                style="@style/Widget.MaterialComponents.Button" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_marginTop="@dimen/view_space"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </LinearLayout>
+            android:text="@string/no_network_connection_error"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:fontFamily="@string/roboto_medium"
+            android:visibility="gone"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
