DocumentParser and Enums

--- a/app/src/main/res/layout/item_changed_menu.xml
+++ b/app/src/main/res/layout/item_changed_menu.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="menu"
-            type="de.wackernagel.essbar.ui.ChangedMenu"/>
+            type="de.wackernagel.essbar.ui.pojos.ChangedMenu"/>
     </data>
 
     <FrameLayout
