--- a/app/src/main/res/layout/item_menu_lunch.xml
+++ b/app/src/main/res/layout/item_menu_lunch.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="obj"
-            type="de.wackernagel.essbar.ui.Menu"/>
+            type="de.wackernagel.essbar.ui.pojos.Menu"/>
         <variable
             name="holder"
             type="de.wackernagel.essbar.ui.MenuListAdapter.MenuViewHolder"/>
