change calendar week with bottom sheet

--- a/app/src/main/res/layout/action_layout_calendar_week.xml
+++ b/app/src/main/res/layout/action_layout_calendar_week.xml
@@ -22,7 +22,7 @@
         android:paddingTop="2dp"
         android:textColor="@android:color/black"
         android:textSize="10sp"
-        android:fontFamily="@string/roboto_light"
+        android:fontFamily="@string/roboto_regular"
         tools:ignore="SmallSp"
         tools:text="31"/>
 
