--- a/app/src/main/res/layout/item_calendar_week.xml
+++ b/app/src/main/res/layout/item_calendar_week.xml
@@ -13,7 +13,7 @@
         android:background="@drawable/checkable_selector"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        app:edit="@{item.selected}">
+        app:check="@{item.selected}">
 
         <TextView
             android:layout_width="wrap_content"
