--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -5,21 +5,18 @@
 
     <data>
         <variable
-            name="obj"
+            name="item"
             type="de.wackernagel.essbar.ui.pojos.Menu"/>
         <variable
-            name="holder"
-            type="de.wackernagel.essbar.ui.MenuListAdapter.MenuViewHolder"/>
-        <variable
-            name="adapter"
-            type="de.wackernagel.essbar.ui.MenuListAdapter"/>
+            name="viewModel"
+            type="de.wackernagel.essbar.ui.viewModels.MenuViewModel"/>
     </data>
 
     <de.wackernagel.essbar.utils.CheckableFrameLayout
         android:background="@drawable/checkable_selector"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        app:edit="@{holder.isChanged()}">
+        app:check="@{item.changed}">
 
         <TextView
             android:id="@+id/textView"
@@ -28,7 +25,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="56dp"
-            android:text="@{@string/menu_name_and_price(obj.menuName, obj.price)}"
+            android:text="@{@string/menu_name_and_price(item.menuName, item.price)}"
             tools:text="Frühstück"
             style="@style/ListItemTitle"/>
 
@@ -38,9 +35,10 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_gravity="end|center_vertical"
-            android:visibility="@{obj.editable}"
-            android:checked="@{adapter.isMenuChecked( obj.id )}"
-            android:onCheckedChanged="@{holder::onCheckedChanged}"
+            android:visibility="@{item.editable}"
+            android:checked="@{item.actualOrdered}"
+            android:onCheckedChanged="@{viewModel::changeOrder}"
+            app:singleTag="@{item}"
             tools:checked="true" />
 
         <ImageView
@@ -52,7 +50,7 @@
             android:src="@drawable/ic_shopping_cart_black_24dp"
             android:tint="@color/colorAccent"
             android:contentDescription="@null"
-            android:visibility="@{!obj.editable &amp;&amp; obj.ordered}"
+            android:visibility="@{!item.editable &amp;&amp; item.ordered}"
             tools:visibility="gone"/>
 
     </de.wackernagel.essbar.utils.CheckableFrameLayout>
