unique data binding list adapter (Section)

--- a/app/src/main/res/layout/item_calendar_week.xml
+++ b/app/src/main/res/layout/item_calendar_week.xml
@@ -7,6 +7,9 @@
         <variable
             name="item"
             type="de.wackernagel.essbar.ui.pojos.CalendarWeek"/>
+        <variable
+            name="viewModel"
+            type="de.wackernagel.essbar.ui.viewModels.MenuViewModel"/>
     </data>
 
     <de.wackernagel.essbar.utils.CheckableFrameLayout
