--- a/app/src/main/res/layout/item_section.xml
+++ b/app/src/main/res/layout/item_section.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list_item_section_text"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/section_height"
-    android:gravity="center_vertical"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    tools:text="5 Items"
-    style="@style/ListItemSection"/>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="item"
+            type="de.wackernagel.essbar.ui.pojos.Section"/>
+    </data>
+
+    <TextView
+        android:id="@+id/list_item_section_text"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/section_height"
+        android:gravity="center_vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:text="@{item.getTitle(context)}"
+        tools:text="5 Items"
+        style="@style/ListItemSection"/>
+</layout>
